Refactor exception handling and messages - Introduce DomainException for domain-specific errors - Standardize error messages for consistency - Update ApiException to use a default HTTP status code