@@ -3,6 +3,7 @@ package com.github.fabiankevin.quickstart.web;
 
 import com.fasterxml.jackson.databind.exc.InvalidFormatException;
 import com.github.fabiankevin.quickstart.exceptions.ApiException;
+import com.github.fabiankevin.quickstart.exceptions.DomainException;
 import com.github.fabiankevin.quickstart.web.dto.ApiErrorResponse;
 import jakarta.validation.ConstraintViolationException;
 import lombok.extern.slf4j.Slf4j;
@@ -35,11 +36,24 @@ import java.util.stream.Collectors;
 @Slf4j
 public class GlobalExceptionHandler {
 
+    @ExceptionHandler(DomainException.class)
+    public ResponseEntity<ApiErrorResponse> handleDomainException(DomainException ex) {
+        log.debug("DomainException: {}", ex.getMessage(), ex);
+        return ResponseEntity.status(HttpStatusCode.valueOf(400))
+                .body(new ApiErrorResponse("Request failed", ex.getMessage()));
+
+    }
+
     @ExceptionHandler(ApiException.class)
     public ResponseEntity<ApiErrorResponse> handleAppException(ApiException ex) {
         log.debug("ApiException: {}", ex.getMessage(), ex);
-        return ResponseEntity.status(HttpStatusCode.valueOf(ex.getHttpStatusCode()))
-                .body(new ApiErrorResponse("Request Failed", ex.getMessage()));
+        HttpStatusCode status = HttpStatusCode.valueOf(ex.getHttpStatusCode());
+        if (ex.getClass().getSimpleName().contains("NotFound")) {
+            status = HttpStatusCode.valueOf(404);
+        }
+
+        return ResponseEntity.status(status)
+                .body(new ApiErrorResponse("Request failed", ex.getMessage()));
 
     }
 
@@ -52,8 +66,8 @@ public class GlobalExceptionHandler {
                 .getFieldErrors()
                 .stream()
                 .map(FieldError::getDefaultMessage)
-                .collect(Collectors.toList());
-        return new ApiErrorResponse("Invalid Request Parameters", errors);
+                .toList();
+        return new ApiErrorResponse("Invalid request parameters", errors);
     }
 
     @ExceptionHandler(HttpMessageNotReadableException.class)
@@ -61,35 +75,35 @@ public class GlobalExceptionHandler {
     public ApiErrorResponse handleHttpMessageNotReadableException(HttpMessageNotReadableException ex) {
         log.debug("HttpMessageNotReadableException: {}", ex.getMessage(), ex);
 
-        if(ex.getCause() instanceof InvalidFormatException invalidFormatException){
-            return new ApiErrorResponse("Data Format Error", invalidFormatException.getPath().stream()
-                    .map(ref -> "The value provided for '%s' has an incorrect format" .formatted(ref.getFieldName()))
+        if (ex.getCause() instanceof InvalidFormatException invalidFormatException) {
+            return new ApiErrorResponse("Invalid request body", invalidFormatException.getPath().stream()
+                    .map(ref -> "The value provided for '%s' has an incorrect format".formatted(ref.getFieldName()))
                     .toList());
-        } 
-        
-        return new ApiErrorResponse("Invalid Request Format", "The request body is not properly formatted or contains invalid JSON");
+        }
+
+        return new ApiErrorResponse("Invalid request body", "The request body is not properly formatted or contains invalid JSON");
     }
 
     @ExceptionHandler(MethodArgumentTypeMismatchException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ApiErrorResponse handle(MethodArgumentTypeMismatchException ex) {
+    public ApiErrorResponse handleMethodArgumentTypeMismatchException(MethodArgumentTypeMismatchException ex) {
         log.debug("MethodArgumentTypeMismatchException: {}", ex.getMessage(), ex);
         String errorMessage = String.format("Parameter '%s' must be of type '%s'", ex.getName(), ex.getRequiredType().getSimpleName());
-        return new ApiErrorResponse("Type Mismatch", errorMessage);
+        return new ApiErrorResponse("Type mismatch", errorMessage);
     }
 
     @ExceptionHandler(ServletRequestBindingException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ApiErrorResponse handle(ServletRequestBindingException ex) {
+    public ApiErrorResponse handleRequestBindingException(ServletRequestBindingException ex) {
         log.debug("ServletRequestBindingException: {}", ex.getMessage(), ex);
-        return new ApiErrorResponse("Missing Request Parameters", "Required request parameters or headers are missing or invalid");
+        return new ApiErrorResponse("Missing required request parameters", "Required request parameters or headers are missing or invalid");
     }
 
     @ExceptionHandler(HandlerMethodValidationException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
     public ApiErrorResponse handlerMethodValidationException(HandlerMethodValidationException ex) {
         log.debug("HandlerMethodValidationException: {}", ex.getMessage(), ex);
-        return new ApiErrorResponse("Invalid Request",
+        return new ApiErrorResponse("Invalid request",
                 ex.getValueResults().getFirst().getResolvableErrors().stream()
                         .map(MessageSourceResolvable::getDefaultMessage)
                         .toList());
@@ -102,15 +116,15 @@ public class GlobalExceptionHandler {
         List<String> errors = ex.getConstraintViolations()
                 .stream()
                 .map(violation -> violation.getPropertyPath() + ": " + violation.getMessage())
-                .collect(Collectors.toList());
-        return new ApiErrorResponse("Validation Failed", errors);
+                .toList();
+        return new ApiErrorResponse("Validation failed", errors);
     }
 
     @ExceptionHandler(MissingServletRequestParameterException.class)
     @ResponseStatus(HttpStatus.BAD_REQUEST)
     public ApiErrorResponse handleMissingParams(MissingServletRequestParameterException ex) {
         log.debug("MissingServletRequestParameterException: {}", ex.getMessage(), ex);
-        return new ApiErrorResponse("Missing Parameter",
+        return new ApiErrorResponse("Missing parameter",
                 String.format("The required parameter '%s' of type '%s' is missing",
                         ex.getParameterName(), ex.getParameterType()));
     }
@@ -119,7 +133,7 @@ public class GlobalExceptionHandler {
     @ResponseStatus(HttpStatus.BAD_REQUEST)
     public ApiErrorResponse handleMissingHeader(MissingRequestHeaderException ex) {
         log.debug("MissingRequestHeaderException: {}", ex.getMessage(), ex);
-        return new ApiErrorResponse("Missing Header",
+        return new ApiErrorResponse("Missing header",
                 String.format("The required header '%s' is missing", ex.getHeaderName()));
     }
 
@@ -127,7 +141,7 @@ public class GlobalExceptionHandler {
     @ResponseStatus(HttpStatus.FORBIDDEN)
     public ApiErrorResponse handleAccessDeniedException(AccessDeniedException ex) {
         log.debug("AccessDeniedException: {}", ex.getMessage(), ex);
-        return new ApiErrorResponse("Access Denied",
+        return new ApiErrorResponse("Access denied",
                 "You don't have permission to access this resource");
     }
 
@@ -136,7 +150,7 @@ public class GlobalExceptionHandler {
     @ResponseStatus(HttpStatus.METHOD_NOT_ALLOWED)
     public ApiErrorResponse handle(HttpRequestMethodNotSupportedException ex) {
         log.debug("HttpRequestMethodNotSupportedException: {}", ex.getMessage(), ex);
-        return new ApiErrorResponse("Method Not Allowed",
+        return new ApiErrorResponse("Method not allowed",
                 String.format("The %s method is not allowed for this endpoint. Allowed methods are: %s", ex.getMethod(), ex.getSupportedHttpMethods()));
     }
 
@@ -144,7 +158,7 @@ public class GlobalExceptionHandler {
     @ResponseStatus(HttpStatus.UNSUPPORTED_MEDIA_TYPE)
     public ApiErrorResponse handleUnsupportedMediaType(HttpMediaTypeNotSupportedException ex) {
         log.debug("HttpMediaTypeNotSupportedException: {}", ex.getMessage(), ex);
-        return new ApiErrorResponse("Unsupported Media Type",
+        return new ApiErrorResponse("Unsupported media type",
                 String.format("The content type '%s' is not supported. Supported types are: %s",
                         ex.getContentType(),
                         ex.getSupportedMediaTypes().stream()
@@ -156,7 +170,7 @@ public class GlobalExceptionHandler {
     @ResponseStatus(HttpStatus.SERVICE_UNAVAILABLE)
     public ApiErrorResponse handleAsyncRequestTimeoutException(AsyncRequestTimeoutException ex) {
         log.debug("AsyncRequestTimeoutException: {}", ex.getMessage(), ex);
-        return new ApiErrorResponse("Request Timeout",
+        return new ApiErrorResponse("Request timeout",
                 "The request took too long to process and timed out");
     }
 
@@ -164,14 +178,14 @@ public class GlobalExceptionHandler {
     @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
     public ApiErrorResponse handleGenericException(Exception ex) {
         log.debug("handleGenericException: {}", ex.getMessage(), ex);
-        return new ApiErrorResponse("Internal Server Error", "An unexpected error occurred. Please try again later or contact support if the problem persists.");
+        return new ApiErrorResponse("Internal server error", "An unexpected error occurred. Please try again later or contact support if the problem persists.");
     }
 
     @ExceptionHandler(MaxUploadSizeExceededException.class)
-    @ResponseStatus(HttpStatus.PAYLOAD_TOO_LARGE)
+    @ResponseStatus(HttpStatus.CONTENT_TOO_LARGE)
     public ApiErrorResponse handleMaxUploadSizeExceededException(MaxUploadSizeExceededException ex) {
         log.debug("MaxUploadSizeExceededException: {}", ex.getMessage(), ex);
-        return new ApiErrorResponse("File Too Large",
-                "The uploaded file exceeds the maximum allowed size");
+        return new ApiErrorResponse("Content too large",
+                "The uploaded content exceeds the maximum allowed size");
     }
 }
